# ntp_usg

./: .gitignore  .pre-commit-config.yaml  ALGORITHMS.md  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  PERFORMANCE.md  README.md  RFC_COMPLIANCE.md  RFCs.md  ROADMAP.md  deny.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/docker/: Dockerfile
.github/workflows/: bench.yml  ci.yml  docker.yml  publish.yml  security.yml
benchmarks/: README.md  analyze.py  generate-report.sh  run-all.sh  setup.sh  test-client-accuracy.sh  test-resources.sh  test-server-throughput.sh  test-stratum1.sh
crates/ntp_usg/: Cargo.toml  README.md
crates/ntp_usg-client/: Cargo.toml
crates/ntp_usg-client/benches/: selection_benchmark.rs
crates/ntp_usg-client/examples/: WEB_DASHBOARD.md  async_request.rs  clock_adjust.rs  continuous.rs  daemon.rs  discipline.rs  gps_pps_combined.rs  gps_receiver.rs  high_precision.rs  hwts_demo.rs  multi_peer_deployment.rs  multiple_servers.rs  ntpv5_client.rs  nts_continuous.rs  nts_multi_peer.rs  nts_request.rs  nts_smol.rs  packet_details.rs  pps_receiver.rs  request.rs  roughtime.rs  smol_continuous.rs  smol_request.rs  socket_opts.rs  symmetric.rs  timeout.rs  web_dashboard.rs
crates/ntp_usg-client/src/: async_ntp.rs  broadcast_client.rs  client.rs  client_common.rs  clock.rs  clock_adjust.rs  discipline.rs  error.rs  filter.rs  lib.rs  nts.rs  nts_ke_exchange.rs  request.rs  roughtime.rs  selection.rs  smol_client.rs  smol_ntp.rs  smol_nts.rs  sntp.rs  socket_opts.rs  symmetric.rs  tls_config.rs
crates/ntp_usg-client/src/refclock/: README.md  error.rs  gps.rs  hwts.rs  mod.rs  nmea.rs  pps.rs
crates/ntp_usg-client/tests/: README.md  async_ntp.rs  broadcast_integration.rs  client.rs  discipline_integration.rs  error_downcast.rs  integration.rs  nts.rs  nts_integration.rs  proptest_filter.rs  proptest_selection.rs  roughtime.rs  smol_client.rs  smol_ntp.rs  symmetric_integration.rs
crates/ntp_usg-client/tests/common/: mod.rs
crates/ntp_usg-proto/: Cargo.toml
crates/ntp_usg-proto/benches/: nts_benchmark.rs  parsing_benchmark.rs
crates/ntp_usg-proto/examples/: embedded_nostd.rs
crates/ntp_usg-proto/fuzz/: Cargo.toml
crates/ntp_usg-proto/fuzz/fuzz_targets/: fuzz_extension_fields.rs  fuzz_nts_authenticator.rs  fuzz_packet_from_bytes.rs  fuzz_packet_roundtrip.rs  fuzz_packet_v5.rs  fuzz_roughtime.rs
crates/ntp_usg-proto/src/: error.rs  extension.rs  lib.rs  ntpv5_ext.rs  nts_common.rs  unix_time.rs
crates/ntp_usg-proto/src/protocol/: bloom.rs  bytes.rs  io.rs  md5.rs  mod.rs  ntpv5.rs  traits.rs  types.rs
crates/ntp_usg-proto/src/roughtime/: crypto.rs  error.rs  mod.rs  types.rs  wire.rs
crates/ntp_usg-proto/tests/: proptest_protocol.rs  protocol.rs
crates/ntp_usg-server/: Cargo.toml
crates/ntp_usg-server/benches/: throughput_benchmark.rs
crates/ntp_usg-server/examples/: ntpv5_server.rs  nts_server.rs  rate_limiter.rs  server.rs  stratum1_server.rs
crates/ntp_usg-server/src/: broadcast.rs  error.rs  lib.rs  multicast.rs  nts_ke_server.rs  nts_ke_server_common.rs  nts_server_common.rs  server.rs  server_common.rs  smol_nts_ke_server.rs  smol_server.rs  socket_opts.rs  tls_config.rs
crates/ntp_usg-server/src/server_common/: access_control.rs  builder.rs  config.rs  interleaved.rs  metrics.rs  mod.rs  network.rs  ntpv5.rs  pipeline.rs  rate_limit.rs  response.rs  state.rs  validation.rs
crates/ntp_usg-server/tests/: ntpv5_integration.rs  server_integration.rs  smol_server_integration.rs
crates/ntp_usg-server/tests/common/: mod.rs
crates/ntp_usg-server/tests/common_smol/: mod.rs
crates/ntp_usg-wasm/: Cargo.toml
crates/ntp_usg-wasm/src/: lib.rs
crates/ntp_usg-wasm/tests/: web.rs
crates/ntp_usg/src/: lib.rs
dev/bench/: data.js
docker/: .dockerignore  README.md  docker-compose.yml  ntp-server.Dockerfile  nts-server.Dockerfile  test-runner.Dockerfile
docs/: BENCHMARKS.md  CRYPTO.md  DEPLOYMENT.md  DUPLICATION_AUDIT.md  FEATURE_FLAGS.md  PLATFORM_SUPPORT.md  REFACTORING.md  v3.3.0-RELEASE.md  v3.3.0-complete.md  v3.3.0-final-summary.md  v3.3.0-plan.md  v3.3.0-summary.md
examples/: async_request.rs  async_std_continuous.rs  async_std_request.rs  clock_adjust.rs  continuous.rs  multiple_servers.rs  nts_continuous.rs  nts_request.rs  packet_details.rs  request.rs  smol_continuous.rs  smol_request.rs  timeout.rs
src/: async_ntp.rs  async_std_client.rs  async_std_ntp.rs  async_std_nts.rs  client.rs  client_common.rs  clock.rs  error.rs  extension.rs  filter.rs  lib.rs  nts.rs  nts_common.rs  protocol.rs  smol_client.rs  smol_ntp.rs  smol_nts.rs  unix_time.rs
tests/: async_ntp.rs  client.rs  nts.rs  protocol.rs  smol_client.rs  smol_ntp.rs
