[package]
name = "ntp_usg"
version = "2.0.2"
authors = [
    "Jeff Belgum <jeffbelgum@gmail.com>",
    "John Willman <john.willman.1@us.af.mil>",
]
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.93"
description = "Library for parsing and communicating over Network Time Protocol."
documentation = "https://docs.rs/ntp_usg/"
homepage = "https://github.com/192d-Wing/ntp_usg"
repository = "https://github.com/192d-Wing/ntp_usg"
readme = "README.md"
keywords = ["protocol", "network", "time", "parser", "binary"]
categories = [
    "date-and-time",
    "network-programming",
    "parser-implementations",
    "encoding",
]

[lib]
name = "ntp"

[features]
default = ["std"]
std = ["dep:byteorder", "dep:log"]
alloc = []
tokio = ["std", "dep:tokio"]
nts = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:webpki-roots",
    "dep:aes-siv",
    "dep:rand",
    "tokio",
]
clock = ["std", "dep:libc", "dep:windows-sys"]
smol-runtime = ["std", "dep:smol", "dep:futures-lite"]
nts-smol = [
    "smol-runtime",
    "dep:rustls",
    "dep:futures-rustls",
    "dep:webpki-roots",
    "dep:aes-siv",
    "dep:rand",
]

[dependencies]
byteorder = { version = "1.5", optional = true }
log = { version = "0.4", optional = true }
tokio = { version = "1", features = [
    "net",
    "time",
    "sync",
    "io-util",
], optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = [
    "tls12",
] }
aes-siv = { version = "0.7", optional = true }
rand = { version = "0.10", optional = true }
webpki-roots = { version = "1", optional = true }
smol = { version = "2", optional = true }
futures-rustls = { version = "0.26", optional = true, default-features = false, features = [
    "tls12",
] }
futures-lite = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_Foundation",
] }

[[example]]
name = "async_request"
required-features = ["tokio"]

[[example]]
name = "continuous"
required-features = ["tokio"]

[[example]]
name = "nts_request"
required-features = ["nts"]

[[example]]
name = "nts_continuous"
required-features = ["nts"]

[[example]]
name = "clock_adjust"
required-features = ["clock", "tokio"]

[[example]]
name = "smol_request"
required-features = ["smol-runtime"]

[[example]]
name = "smol_continuous"
required-features = ["smol-runtime"]

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
smol = "2"
