[workspace]
resolver = "3"
members = [
    "crates/ntp_usg-proto",
    "crates/ntp_usg-client",
    "crates/ntp_usg-server",
    "crates/ntp_usg",
]

[workspace.package]
version = "3.1.0"
authors = [
    "Jeff Belgum <jeffbelgum@gmail.com>",
    "John Willman <john.willman.1@us.af.mil>",
]
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.93"
homepage = "https://github.com/192d-Wing/ntp_usg"
repository = "https://github.com/192d-Wing/ntp_usg"

[workspace.dependencies]
ntp_usg-proto = { path = "crates/ntp_usg-proto", version = "3.1.0" }
byteorder = "1.5"
log = "0.4"
tokio = { version = "1", features = ["net", "time", "sync", "io-util", "rt"] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
rustls-pki-types = { version = "1", features = ["std"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "tls12",
] }
aes-siv = "0.7"
rand = "0.10"
webpki-roots = "1"
smol = "2"
futures-rustls = { version = "0.26", default-features = false, features = [
    "tls12",
] }
futures-lite = "2"
libc = "0.2"
windows-sys = { version = "0.61", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_Foundation",
] }
chrono = "0.4"
