[package]
name = "ntp_usg-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "NTP server library with tokio/smol and NTS-KE support."
documentation = "https://docs.rs/ntp_usg-server/"
readme = "../../README.md"
keywords = ["protocol", "network", "time", "ntp", "server"]
categories = ["date-and-time", "network-programming"]

[lib]
name = "ntp_server"

[features]
default = []
tokio = ["dep:tokio"]
nts = [
    "tokio",
    "ntp_usg-proto/nts",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:rand",
]
symmetric = []
broadcast = []
smol-runtime = ["dep:smol", "dep:futures-lite"]
nts-smol = [
    "smol-runtime",
    "ntp_usg-proto/nts",
    "dep:rustls",
    "dep:futures-rustls",
    "dep:rustls-pemfile",
    "dep:rand",
]

[dependencies]
ntp_usg-proto = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
futures-rustls = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[[example]]
name = "server"
required-features = ["tokio"]

[[example]]
name = "nts_server"
required-features = ["nts"]
