[package]
name = "ntp_usg-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "NTP server library with tokio/smol and NTS-KE support."
documentation = "https://docs.rs/ntp_usg-server/"
readme = "../../README.md"
keywords = ["protocol", "network", "time", "ntp", "server"]
categories = ["date-and-time", "network-programming"]

[lib]
name = "ntp_server"

[features]
default = []
tokio = ["dep:tokio"]
nts = [
    "tokio",
    "ntp_usg-proto/nts",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pki-types",
    "dep:rand",
]
symmetric = []
broadcast = []
refclock = ["tokio", "dep:ntp_usg-client", "dep:async-trait"]
gps = ["refclock", "ntp_usg-client/gps"]
pps = ["refclock", "ntp_usg-client/pps"]
smol-runtime = ["dep:smol", "dep:futures-lite"]
nts-smol = [
    "smol-runtime",
    "ntp_usg-proto/nts",
    "dep:rustls",
    "dep:futures-rustls",
    "dep:rustls-pki-types",
    "dep:rand",
]

[dependencies]
ntp_usg-proto = { workspace = true }
ntp_usg-client = { path = "../ntp_usg-client", version = "3.4.0", optional = true, default-features = false, features = ["refclock"] }
log = { workspace = true }
tokio = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
futures-rustls = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
env_logger = "0.11"

[[example]]
name = "server"
required-features = ["tokio"]

[[example]]
name = "nts_server"
required-features = ["nts"]

[[example]]
name = "stratum1_server"
required-features = ["refclock"]

[[example]]
name = "rate_limiter"
required-features = ["tokio"]

[lints]
workspace = true
